added constants (removed hardcode)

--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,3 +1,5 @@
-sut=www.iana.org
+sut=https://www.iana.org
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
+#device=emulator-5554
+device=5200b9bffeb8453b
