--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -1,3 +1,5 @@
 aut=./src/main/resources/ContactManager.apk
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
+#device=emulator-5554
+device=5200b9bffeb8453b
