added xml configs

--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,5 +1,6 @@
 sut=https://www.iana.org
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
+browserTitle=Internet Assigned Numbers Authority
 #device=emulator-5554
 device=5200b9bffeb8453b
