--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -2,5 +2,4 @@ aut=./src/main/resources/ContactManager.apk
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
 appPackageInDevice=com.example.android.contactmanager
-#device=emulator-5554
-device=5200b9bffeb8453b
+device=emulator-5554
