--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -2,5 +2,4 @@ sut=https://www.iana.org
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
 browserTitle=Internet Assigned Numbers Authority
-#device=emulator-5554
-device=5200b9bffeb8453b
+device=emulator-5554
