returned comments to properties

--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -3,3 +3,4 @@ platform=Android
 driver=http://127.0.0.1:4723/wd/hub
 appPackageInDevice=com.example.android.contactmanager
 device=emulator-5554
+#device=5200b9bffeb8453b
