--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -3,3 +3,4 @@ platform=Android
 driver=http://127.0.0.1:4723/wd/hub
 browserTitle=Internet Assigned Numbers Authority
 device=emulator-5554
+#device=5200b9bffeb8453b
