--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -1,6 +1,25 @@
 aut=./src/main/resources/ContactManager.apk
 platform=Android
-driver=http://127.0.0.1:4723/wd/hub
 appPackageInDevice=com.example.android.contactmanager
-device=emulator-5554
+activity=com.example.android.contactmanager.ContactManager
+
+#St.Petersburg:
+driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
+device=LGE Nexus 5
+udid=044cd04b09d351ab
+#token : effbf1e6-d094-4025-995b-20046856715a
+
+#Minsk:
+#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#device=HMD GLOBAL 1
+#udid=FRTBA80613002781
+#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
+
+#Local:
+#driver=http://127.0.0.1:4723/wd/hub
+#Emulator:
+#device=emulator-5554
+#Physical:
 #device=5200b9bffeb8453b
+#serial? 10623618503190643167
+
