--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,6 +1,8 @@
 sut=https://www.iana.org
-platform=Android
-driver=http://127.0.0.1:4723/wd/hub
 browserTitle=Internet Assigned Numbers Authority
-device=emulator-5554
+platform=iOS
+http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#driver=http://127.0.0.1:4723/wd/hub
+#device=emulator-5554
 #device=5200b9bffeb8453b
+#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
