--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -4,16 +4,21 @@ appPackageInDevice=com.example.android.contactmanager
 activity=com.example.android.contactmanager.ContactManager
 
 #St.Petersburg:
-driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
-device=LGE Nexus 5
-udid=044cd04b09d351ab
+#driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
+#device=LGE Nexus 5
+#udid=044cd04b09d351ab
 #token : effbf1e6-d094-4025-995b-20046856715a
 
-#Minsk:
-#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
-#device=HMD GLOBAL 1
-#udid=FRTBA80613002781
+#Minsk 1 :
+driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+device=HMD GLOBAL 1
+udid=FRTBA80613002781
 #token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
+
+#Minsk 2 :
+#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#device=SAMSUNG SM-T580
+#udid=5200dd305a7a15f7
 
 #Local:
 #driver=http://127.0.0.1:4723/wd/hub
