--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,7 +1,15 @@
 sut=https://www.iana.org
 browserTitle=Internet Assigned Numbers Authority
 platform=iOS
-http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+
+
+#Minsk 1 :
+driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+device=IPAD 6,11
+udid=30bd9d29b7f55bce7e4856b27d2a84d6ed755b6e
+#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
+
+#Local:
 #driver=http://127.0.0.1:4723/wd/hub
 #device=emulator-5554
 #device=5200b9bffeb8453b
