added PO for App

--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -1,7 +1,7 @@
 aut=./src/main/resources/ContactManager.apk
 platform=Android
 appPackageInDevice=com.example.android.contactmanager
-activity=com.example.android.contactmanager.ContactManager
+#activity=com.example.android.contactmanager.ContactManager
 
 #St.Petersburg:
 #driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
@@ -10,9 +10,9 @@ activity=com.example.android.contactmanager.ContactManager
 #token : effbf1e6-d094-4025-995b-20046856715a
 
 #Minsk 1 :
-driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
-device=HMD GLOBAL 1
-udid=FRTBA80613002781
+#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#device=HMD GLOBAL 1
+#udid=FRTBA80613002781
 #token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
 
 #Minsk 2 :
@@ -21,10 +21,10 @@ udid=FRTBA80613002781
 #udid=5200dd305a7a15f7
 
 #Local:
-#driver=http://127.0.0.1:4723/wd/hub
+driver=http://127.0.0.1:4723/wd/hub
 #Emulator:
 #device=emulator-5554
 #Physical:
-#device=5200b9bffeb8453b
+device=5200b9bffeb8453b
 #serial? 10623618503190643167
 
