web PO works for Android and iOS

--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,12 +1,18 @@
 sut=https://www.iana.org
 browserTitle=Internet Assigned Numbers Authority
-platform=iOS
+#platform=iOS
 
+platform=Android
+#Minsk 0:
+device=HMD GLOBAL 1
+udid=FRTBA80615001370
 
 #Minsk 1 :
 driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
-device=IPAD 6,11
-udid=30bd9d29b7f55bce7e4856b27d2a84d6ed755b6e
+#device=IPAD 3,4
+#udid=7df90ef7c1342a703e33a3470cfff84b29ed30f0
+#device=IPAD 6,11
+#udid=30bd9d29b7f55bce7e4856b27d2a84d6ed755b6e
 #token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
 
 #Local:
