--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -1,30 +1,34 @@
-aut=./src/main/resources/ContactManager.apk
-platform=Android
-appPackageInDevice=com.example.android.contactmanager
-#activity=com.example.android.contactmanager.ContactManager
-
-#St.Petersburg:
-#driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
-#device=LGE Nexus 5
-#udid=044cd04b09d351ab
-#token : effbf1e6-d094-4025-995b-20046856715a
-
-#Minsk 1 :
+#MINSK CLOUD 1 :
 #driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
 #device=HMD GLOBAL 1
 #udid=FRTBA80613002781
-#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
+#aut=./src/main/resources/ContactManager.apk
+#platform=Android
+#appPackageInDevice=com.example.android.contactmanager
+#activity=com.example.android.contactmanager.ContactManager
 
-#Minsk 2 :
+#MINSK CLOUD 2 :
 #driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
 #device=SAMSUNG SM-T580
 #udid=5200dd305a7a15f7
+#aut=./src/main/resources/ContactManager.apk
+#platform=Android
+#appPackageInDevice=com.example.android.contactmanager
+#activity=com.example.android.contactmanager.ContactManager
 
-#Local:
-driver=http://127.0.0.1:4723/wd/hub
-#Emulator:
-#device=emulator-5554
-#Physical:
+#LOCAL PHYSICAL DEVICE:
 device=5200b9bffeb8453b
-#serial? 10623618503190643167
+driver=http://127.0.0.1:4723/wd/hub
+aut=./src/main/resources/ContactManager.apk
+platform=Android
+appPackageInDevice=com.example.android.contactmanager
+activity=com.example.android.contactmanager.ContactManager
 
+#SPB CLOUD:
+#driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
+#device=LGE Nexus 5
+#udid=044cd04b09d351ab
+#aut=./src/main/resources/ContactManager.apk
+#platform=Android
+#appPackageInDevice=com.example.android.contactmanager
+#activity=com.example.android.contactmanager.ContactManager
