--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -1,22 +1,29 @@
-sut=https://www.iana.org
-browserTitle=Internet Assigned Numbers Authority
+#ANDROID - MINSK CLOUD 1:
+#platform=Android
+#device=HMD GLOBAL 1
+#udid=FRTBA80615001370
+#sut=https://www.iana.org
+#browserTitle=Internet Assigned Numbers Authority
+
+#iOS - MINSK CLOUD 2:
 #platform=iOS
-
-platform=Android
-#Minsk 0:
-device=HMD GLOBAL 1
-udid=FRTBA80615001370
-
-#Minsk 1 :
-driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
 #device=IPAD 3,4
 #udid=7df90ef7c1342a703e33a3470cfff84b29ed30f0
+#sut=https://www.iana.org
+#browserTitle=Internet Assigned Numbers Authority
+
+#iOS - MINSK CLOUD 3:
+#platform=iOS
+#driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
+#sut=https://www.iana.org
+#browserTitle=Internet Assigned Numbers Authority
 #device=IPAD 6,11
 #udid=30bd9d29b7f55bce7e4856b27d2a84d6ed755b6e
-#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
 
-#Local:
-#driver=http://127.0.0.1:4723/wd/hub
-#device=emulator-5554
-#device=5200b9bffeb8453b
-#token : b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7
+#ANDROID - LOCAL PHYSICAL DEVICE:
+platform=Android
+driver=http://127.0.0.1:4723/wd/hub
+device=5200b9bffeb8453b
+sut=https://www.iana.org
+browserTitle=Internet Assigned Numbers Authority
