--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -7,7 +7,7 @@
 #appPackageInDevice=com.example.android.contactmanager
 #activity=com.example.android.contactmanager.ContactManager
 
-#MINSK CLOUD 2 :
+#MINSK CLOUD 2 : works 26.03 20.11
 #driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
 #device=SAMSUNG SM-T580
 #udid=5200dd305a7a15f7
@@ -16,8 +16,9 @@
 #appPackageInDevice=com.example.android.contactmanager
 #activity=com.example.android.contactmanager.ContactManager
 
-#LOCAL PHYSICAL DEVICE:
-device=5200b9bffeb8453b
+#LOCAL PHYSICAL DEVICE: works 26.03 20.28
+device=SAMSUNG SM-J530FM
+udid=5200b9bffeb8453b
 driver=http://127.0.0.1:4723/wd/hub
 aut=./src/main/resources/ContactManager.apk
 platform=Android
