proof read, property modification left to do

--- a/src/nativetests.properties
+++ b/src/nativetests.properties
@@ -16,7 +16,7 @@
 #appPackageInDevice=com.example.android.contactmanager
 #activity=com.example.android.contactmanager.ContactManager
 
-#LOCAL PHYSICAL DEVICE: works 26.03 20.28
+#LOCAL PHYSICAL DEVICE: works 26.03 20.28 & 27.03 12.09
 device=SAMSUNG SM-J530FM
 udid=5200b9bffeb8453b
 driver=http://127.0.0.1:4723/wd/hub
