--- a/src/webtest.properties
+++ b/src/webtest.properties
@@ -21,7 +21,7 @@
 #device=IPAD 6,11
 #udid=30bd9d29b7f55bce7e4856b27d2a84d6ed755b6e
 
-#ANDROID - LOCAL PHYSICAL DEVICE: works 26.03 20.26
+#ANDROID - LOCAL PHYSICAL DEVICE: works 26.03 20.26 & 27.03 11.09 & 27.03 12.08
 platform=Android
 driver=http://127.0.0.1:4723/wd/hub
 device=SAMSUNG SM-J530FM
