--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,21 @@
     <artifactId>AnastasiaErmushinaMobile</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
+
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile></suiteXmlFile>
+                        <suiteXmlFile></suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -21,15 +35,6 @@
     </build>
 
     <dependencies>
-
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -50,6 +55,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
