--- a/src/test/resources/props/androidNativeTestCloud.properties
+++ b/src/test/resources/props/androidNativeTestCloud.properties
@@ -1,6 +1,6 @@
-#MINSK CLOUD
-driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
-udid=FA83M1E00084
+#SPB CLOUD:
+driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
+udid=044cd04b09d351ab
 aut=./src/main/resources/ContactManager.apk
 platform=Android
 appPackageInDevice=com.example.android.contactmanager
