--- a/src/test/resources/props/iOSWebTestCloud.properties
+++ b/src/test/resources/props/iOSWebTestCloud.properties
@@ -1,6 +1,6 @@
-#MINSK CLOUD:
+#SPB CLOUD:
 platform=iOS
-driver=http://EPM-TSTF:b01d96e5-debe-4d64-ae8e-ae3fa5a47ce7@mobilecloud.epam.com:8080/wd/hub
-udid=7df90ef7c1342a703e33a3470cfff84b29ed30f0
+driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
+udid=25ad632db73b1de523be6565f395cae349b4dd13
 sut=https://www.iana.org
 browserTitle=Internet Assigned Numbers Authority
