--- a/src/test/resources/props/androidNativeTestCloud.properties
+++ b/src/test/resources/props/androidNativeTestCloud.properties
@@ -1,7 +1,7 @@
 #SPB CLOUD:
-driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
-udid=044cd04b09d351ab
-aut=./src/main/resources/ContactManager.apk
+driver=http://localhost:4723/wd/hub/
+aut=C:\\Users\\Anastasia_Ermushina\\Documents\\ContactManager.apk
 platform=Android
 appPackageInDevice=com.example.android.contactmanager
 activity=com.example.android.contactmanager.ContactManager
+device=POCO X3 NFC
