added: refactor, run on ADV native app local server

--- a/src/test/resources/props/androidNativeAppLocalServerPhysicalDeviceOrAVD.properties
+++ b/src/test/resources/props/androidNativeAppLocalServerPhysicalDeviceOrAVD.properties
@@ -1,7 +1,9 @@
-#SPB CLOUD:
-driver=http://localhost:4723/wd/hub/
+
+server=http://localhost:4723/wd/hub/
 aut=C:\\Users\\Anastasia_Ermushina\\Documents\\ContactManager.apk
 platform=Android
 appPackageInDevice=com.example.android.contactmanager
 activity=com.example.android.contactmanager.ContactManager
-device=POCO X3 NFC
+device=Nexus_5_API_31
+#to run on physical device, look up device name on your device:
+#device=POCO X3 NFC
