--- a/src/test/resources/props/androidWebTestCloud.properties
+++ b/src/test/resources/props/androidWebTestCloud.properties
@@ -1,6 +1,6 @@
-#SPB CLOUD:
-driver=http://EPM-TSTF:effbf1e6-d094-4025-995b-20046856715a@epm-mstfmsq-ci.minsk.epam.com:8080/wd/hub
-udid=044cd04b09d351ab
+
+server=http://localhost:4723/wd/hub/
+device=Nexus_5_API_31
 platform=Android
 sut=https://www.iana.org
 browserTitle=Internet Assigned Numbers Authority
